factor out load_seq to GEOkallisto
Former-commit-id: 4bd36b842504ae8d6dc11ea1d168662c00ada79e [formerly ac917cb88a01f070a52ecadaac1fa9df3c9138e9]
Former-commit-id: 200cbb61bc516bb244830c3cf969ab1a75e3420a
Former-commit-id: ae083faa119e2e44cdc598fb40de9a1e15c97bd1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     DropletUtils(>= 1.6.1),
     DESeq2 (>= 1.26.0),
     doParallel (>= 1.0.15),
+    data.table (>= 1.12.8),
     dtangle (>= 2.0.9),
     drugseqr.data,
     edgeR (>= 3.28.0),
@@ -55,15 +56,12 @@ Imports:
     scran (>= 1.14.5),
     scater (>= 1.15.12),
     sva (>= 3.34.0),
-    tximport (>= 1.14.0),
     tibble (>= 2.1.3)
 Suggests: 
     testthat,
-    AnnotationDbi (>= 1.48.0),
-    ensembldb (>= 2.8.1)
+    AnnotationDbi (>= 1.48.0)
 Depends: 
-    R (>= 4.0.2),
-    data.table (>= 1.12.8),
+    R (>= 4.0.2)
 Remotes: 
     hms-dbmi/drugseqr.data,
     alexvpickering/shinydlplot,
