--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.2.14
+Version: 0.2.15
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: Explore single-cell and bulk RNA-seq datasets and run queries 
@@ -14,12 +14,13 @@ biocViews:
 SystemRequirements:
   kallisto (0.46.0)
 Imports:
+    AnnotationDbi (>= 1.48.0),
     Biobase (>= 2.46.0),
     batchelor (>= 1.3.9),
+    crossmeta,
     dplyr (>= 0.8.3),
     DT (>= 0.11),
     DropletUtils(>= 1.6.1),
-    DESeq2 (>= 1.26.0),
     doParallel (>= 1.0.15),
     data.table (>= 1.12.8),
     dtangle (>= 2.0.9),
@@ -38,8 +39,6 @@ Imports:
     org.Mm.eg.db (>= 3.10.0),
     magrittr (>= 1.5),
     Matrix.utils (>= 0.9.7),
-    metaMA (>= 3.1.2),
-    miniUI (>= 0.1.1.1),
     plotly (>= 4.9.1),
     randomcoloR (>= 1.1.0.1),
     rlang (>= 0.4.3),
@@ -55,15 +54,13 @@ Imports:
     SingleR (>= 1.1.6),
     scran (>= 1.14.5),
     scater (>= 1.15.12),
-    sva (>= 3.34.0),
     tibble (>= 2.1.3)
 Suggests: 
     testthat,
-    AnnotationDbi (>= 1.48.0)
 Depends: 
     R (>= 4.0.2)
 Remotes: 
     hms-dbmi/drugseqr.data,
-    alexvpickering/shinydlplot,
     alexvpickering/GEOkallisto,
+    alexvpickering/crossmeta,
     immunogenomics/harmony
