fix colors for bulk boxplots; spread out bulk cell deconv plot
Former-commit-id: 8f28d4dff1dc0ddb88502d76e2a6fff28f9b1082 [formerly 4cf1ba0e5427ddd95ad2b343c1b287f1582a934e]
Former-commit-id: eb3aadc74a7197f2329c70026779aedc86678429
Former-commit-id: f4cefab583a2737ab91ab0ef4e190bea17380371

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(advancedOptionsInput)
 export(annot_query_res)
 export(append_annot)
 export(boxPlotly)
+export(boxPlotlyCells)
 export(bulkAnal)
 export(bulkAnalInput)
 export(bulkAnnot)
