--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.2.18
+Version: 0.2.19
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: Explore single-cell and bulk RNA-seq datasets and run queries 
@@ -29,7 +29,7 @@ Imports:
     ggplot2 (>= 3.2.1),
     ggridges (>= 0.5.1),
     GO.db (>= 3.10.0),
-    GEOkallisto (>= 0.1.7),
+    rkal (>= 0.1.11),
     hdf5r (>= 1.3.1),
     harmony (>= 1.0),
     igraph (>= 1.2.4.2),
@@ -61,6 +61,6 @@ Depends:
     R (>= 4.0.2)
 Remotes: 
     hms-dbmi/drugseqr.data,
-    alexvpickering/GEOkallisto,
+    alexvpickering/rkal,
     alexvpickering/crossmeta,
     immunogenomics/harmony
