migrate data to drugseqr.data for submission prep
Former-commit-id: 1f0a1a364750809ae359c55b48e276a990ad41d9 [formerly dbc458cba27c1246c0090aede4828553178e1a67]
Former-commit-id: 02b821dd661ebcf1755e8c52ac98d16be0abfe0e
Former-commit-id: dcc5eef3618fcfc59239a721c964132bca1ebd4c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ export(validate_up_annot)
 export(validate_up_custom)
 export(zakquery)
 importFrom(cowplot,theme_cowplot)
+importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,ggplot)
