--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,4 +63,5 @@ Remotes:
     hms-dbmi/drugseqr.data,
     alexvpickering/rkal,
     alexvpickering/crossmeta,
-    immunogenomics/harmony
+    immunogenomics/harmony,
+    MacoskoLab/liger
