fixing R CMD check; remove drugseqr_table app
Former-commit-id: 1e126607712201545410a2af2ae26b9950ebb398 [formerly a1138243fdf56a6a633b6ab8b2d2ca7411129b28]
Former-commit-id: eebd62f342f6d1e7b4c293953fdeeac960ec630e
Former-commit-id: a09ef5ddbf19cbc949321f8b6d64685f8ff1d314

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,12 +16,12 @@ export(load_scseq)
 export(normalize_scseq)
 export(process_raw_scseq)
 export(run_drugseqr)
-export(run_drugseqr_table)
 export(run_tsne)
 export(save_scle)
 export(standardize_cellranger)
 import(rintrojs)
 import(shiny)
+import(shinyjs)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes_string)
@@ -35,6 +35,7 @@ importFrom(grid,unit)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,"%||%")
+importFrom(rlang,":=")
 importFrom(stats,quantile)
 importFrom(utils,argsAnywhere)
 importFrom(utils,isS3method)
