--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Imports:
     ggplot2 (>= 3.2.1),
     ggridges (>= 0.5.1),
     ggrepel,
+    grid,
     GO.db (>= 3.10.0),
     jsonlite,
     rkal (>= 0.1.12),
@@ -55,8 +56,9 @@ Imports:
     magrittr (>= 1.5),
     Matrix.utils (>= 0.9.7),
     Matrix,
+    methods,
     MASS,
-    plotly (>= 4.9.1),
+    plotly,
     randomcoloR (>= 1.1.0.1),
     rlang (>= 0.4.3),
     rintrojs (>= 0.2.2),
@@ -74,8 +76,10 @@ Imports:
     SummarizedExperiment,
     scran (>= 1.14.5),
     stringr,
+    stats,
     scater (>= 1.15.12),
-    tibble (>= 2.1.3)
+    tibble (>= 2.1.3),
+    utils
 Suggests: 
     testthat,
 Depends: 
