document exported shiny modules
Former-commit-id: 5ebe870f29c15feae0790696236cc37636da0e3b [formerly 2ae0d86eb913ea00d7944ee51481d15b5d7ba7d6]
Former-commit-id: 22cfa0ae8eb7b0378d5d1eacf02b476adec483bf
Former-commit-id: 6f5867bea3c88060bbfe25dc4db7caedc3fe922b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(rintrojs)
 import(shiny)
-import(shinyjs)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes_string)
@@ -44,6 +43,12 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,"%||%")
 importFrom(rlang,":=")
+importFrom(shinyjs,addClass)
+importFrom(shinyjs,html)
+importFrom(shinyjs,removeClass)
+importFrom(shinyjs,toggle)
+importFrom(shinyjs,toggleClass)
+importFrom(shinyjs,toggleState)
 importFrom(stats,quantile)
 importFrom(utils,argsAnywhere)
 importFrom(utils,getAnywhere)
