remove liger; fixing checks
Former-commit-id: 7a7016e96a10cb293e16bb18bd1c981a4095926f [formerly 4fec93b77efa558334dee511b6e2b697262f431f]
Former-commit-id: 0864a8af7170122d8b71212f513f9c5244d558e7
Former-commit-id: 07919066309fc9c3795ac57b99ddf419b81ab039

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,8 +44,10 @@ importFrom(rlang,"!!")
 importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(shinyjs,addClass)
+importFrom(shinyjs,hidden)
 importFrom(shinyjs,html)
 importFrom(shinyjs,removeClass)
+importFrom(shinyjs,runjs)
 importFrom(shinyjs,toggle)
 importFrom(shinyjs,toggleClass)
 importFrom(shinyjs,toggleState)
