--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,6 @@ Imports:
     harmony (>= 1.0),
     igraph (>= 1.2.4.2),
     limma (>= 3.40.2),
-    liger (>= 0.5.0),
     LoomExperiment,
     org.Hs.eg.db (>= 3.10.0),
     org.Mm.eg.db (>= 3.10.0),
@@ -88,5 +87,4 @@ Remotes:
     hms-dbmi/drugseqr.data,
     alexvpickering/rkal,
     alexvpickering/crossmeta,
-    immunogenomics/harmony,
-    MacoskoLab/liger
+    immunogenomics/harmony
