remove large files
Former-commit-id: 52bb0c203d340a6f3ae24aa217db1af6f9e6d456

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .Rproj.user
 .Rhistory
 
+data-raw/drug_annot/repurposing_*.txt
+data-raw/biogps/biogps.rds
+data-raw/drug_gene_queries/pert_names*\.rds
+
 # personal files
 sync-aws.sh
 run_sjia.R
