--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: GUI to Explore Single-Cell and Bulk RNA-Seq from Fastq to Pathways and Perturbations
-Version: 0.2.32
+Version: 0.2.33
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: GUI to import and explore single-cell and bulk RNA-seq datasets 
@@ -29,6 +29,7 @@ Imports:
     crossmeta,
     cowplot,
     callr,
+    celldex,
     dplyr (>= 0.8.3),
     DT (>= 0.11),
     DropletUtils(>= 1.6.1),
