--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: GUI to Explore Single-Cell and Bulk RNA-Seq from Fastq to Pathways and Perturbations
-Version: 0.3.0
+Version: 0.4.0
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: GUI to import and explore single-cell and bulk RNA-seq datasets 
@@ -80,7 +80,8 @@ Imports:
     stats,
     scater (>= 1.15.12),
     tibble (>= 2.1.3),
-    utils
+    utils,
+    digest
 Suggests: 
     testthat,
 Depends: 
