--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,12 @@ export(from_crossmeta)
 export(get_outliers)
 export(get_pct_ambient)
 export(get_species)
-export(init_drugseqr)
+export(init_dseqr)
 export(load_scseq)
 export(navbarUI)
 export(normalize_scseq)
 export(process_raw_scseq)
-export(run_drugseqr)
+export(run_dseqr)
 export(run_tsne)
 export(save_scle)
 export(scPage)
