cluster resolution inits, saves, and updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(add_doublet_score)
 export(add_hvgs)
-export(add_scseq_clusters)
 export(bulkPage)
 export(bulkPageUI)
 export(create_scseq)
@@ -19,6 +18,7 @@ export(navbarUI)
 export(normalize_scseq)
 export(process_raw_scseq)
 export(run_dseqr)
+export(run_pca)
 export(run_tsne)
 export(save_scle)
 export(scPage)
