--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(run_tsne)
 export(save_scle)
 export(scPage)
 export(scPageUI)
+import(ggplot2)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(rintrojs)
@@ -45,8 +46,6 @@ importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,waiver)
 importFrom(ggplot2,ylim)
-importFrom(ggridges,geom_density_ridges)
-importFrom(ggridges,theme_ridges)
 importFrom(grid,unit)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
@@ -61,10 +60,8 @@ importFrom(shinyjs,toggle)
 importFrom(shinyjs,toggleClass)
 importFrom(shinyjs,toggleState)
 importFrom(stats,quantile)
-importFrom(stats,rnorm)
 importFrom(utils,argsAnywhere)
 importFrom(utils,getAnywhere)
-importFrom(utils,globalVariables)
 importFrom(utils,isS3method)
 importFrom(utils,isS3stdGeneric)
 importFrom(utils,methods)
