--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,10 @@ export(normalize_scseq)
 export(process_raw_scseq)
 export(run_dseqr)
 export(run_pca)
-export(run_tsne)
+export(run_reduction)
 export(save_scle)
 export(scPage)
 export(scPageUI)
-import(ggplot2)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(rintrojs)
@@ -31,21 +30,12 @@ import(shiny)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes_string)
-importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_raster)
-importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,position_jitterdodge)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
-importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_continuous)
-importFrom(ggplot2,scale_y_discrete)
-importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
-importFrom(ggplot2,waiver)
-importFrom(ggplot2,ylim)
 importFrom(grid,unit)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
