add NEWS; remove loom; use scDblFinder
* Added a `NEWS.md` file to track changes to the package.
* Removed `LoomExperiment` in favor of `qs::qsave(..., preset = 'fast')`
* Uses `scDblFinder` for detecting doublets.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,15 @@ export(docsPageUI)
 export(drugsPage)
 export(drugsPageUI)
 export(from_crossmeta)
+export(get_presto_markers)
 export(get_species)
 export(init_dseqr)
-export(load_scseq)
 export(navbarUI)
 export(normalize_scseq)
 export(process_raw_scseq)
 export(run_dseqr)
 export(run_pca)
 export(run_reduction)
-export(save_scle)
 export(scPage)
 export(scPageUI)
 import(org.Hs.eg.db)
@@ -35,6 +34,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(grid,unit)
 importFrom(magrittr,"%>%")
+importFrom(presto,wilcoxauc)
 importFrom(rlang,"!!")
 importFrom(rlang,"%||%")
 importFrom(rlang,":=")
