init callr for grid lmfit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(navbarUI)
 export(normalize_scseq)
 export(process_raw_scseq)
 export(run_dseqr)
+export(run_limma_scseq)
 export(run_pca)
 export(run_reduction)
 export(scPage)
