export secondary navbar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(from_crossmeta)
 export(get_presto_markers)
 export(get_species)
 export(init_dseqr)
+export(navbar2UI)
 export(navbarUI)
 export(normalize_scseq)
 export(process_raw_scseq)
