precache/EFS transition dgrlogs on dataset select

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(init_dseqr)
 export(navbar2UI)
 export(navbarUI)
 export(normalize_scseq)
+export(precache_dgrlogs)
 export(process_raw_scseq)
 export(run_dseqr)
 export(run_limma_scseq)
@@ -22,6 +23,7 @@ export(run_pca)
 export(run_reduction)
 export(scPage)
 export(scPageUI)
+export(transition_efs)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(rintrojs)
