improve upload modal

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 data-raw/drug_annot/repurposing_*.txt
 data-raw/biogps/biogps.rds
 data-raw/drug_gene_queries/pert_names*\.rds
+data-raw/cellranger_example
 
 # personal files
 sync-aws.sh
