--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(run_reduction)
 export(scPage)
 export(scPageUI)
 export(transition_efs)
+exportClasses(DietSCE)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(rintrojs)
