fix R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,11 +28,14 @@ export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
 export(transition_efs)
+import(celldex)
 import(rintrojs)
 import(shiny)
 importFrom(magrittr,"%>%")
 importFrom(presto,wilcoxauc)
+importFrom(rlang,"%||%")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(shinyjs,addClass)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,html)
