--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Title: GUI to Explore Single-Cell and Bulk RNA-Seq from Fastq to Pathways and Pe
 Version: 0.29.4
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
+BugReports: https://github.com/hms-dbmi/dseqr/issues
+URL: https://github.com/hms-dbmi/dseqr
 Description: GUI to import and explore single-cell and bulk RNA-seq datasets 
     and run queries to find similar and opposing L1000 and CMAP02 perturbation 
     signatures. Single-cell fastq files can be quantified, imported, QC'ed,
@@ -16,7 +18,6 @@ Description: GUI to import and explore single-cell and bulk RNA-seq datasets
     CMAP02 and L1000 perturbation signatures.
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.2
 biocViews:
 SystemRequirements:
@@ -24,12 +25,14 @@ SystemRequirements:
 Imports:
     AnnotationDbi (>= 1.48.0),
     Biobase (>= 2.46.0),
+    BiocManager,
     batchelor (>= 1.3.9),
     crossmeta,
     cowplot,
     callr,
     celldex,
     dplyr (>= 0.8.3),
+    digest,
     DT (>= 0.11),
     DropletUtils(>= 1.6.1),
     data.table (>= 1.12.8),
@@ -37,16 +40,17 @@ Imports:
     dseqr.data,
     edgeR (>= 3.28.0),
     fs,
+    FNN,
     ggplot2 (>= 3.2.1),
-    ggrepel,
-    grid,
     GO.db (>= 3.10.0),
-    jsonlite,
-    rkal (>= 0.1.12),
     hdf5r (>= 1.3.1),
     htmltools,
-    harmony (>= 1.0),
+    htmlwidgets,
+    httr,
+    harmony (>= 0.1.0),
+    HDF5Array,
     igraph (>= 1.2.4.2),
+    jsonlite,
     limma (>= 3.40.2),
     magrittr (>= 1.5),
     Matrix.utils (>= 0.9.7),
@@ -54,11 +58,21 @@ Imports:
     methods,
     MASS,
     plotly,
+    presto,
+    picker (>= 0.2.6),
+    qs,
+    repel,
+    rhandsontable,
+    rkal (>= 0.1.12),
     rlang (>= 0.4.3),
     rintrojs (>= 0.2.2),
-    RColorBrewer,
     scDblFinder,
+    scales,
     Seurat,
+    SeuratObject,
+    SingleCellExperiment,
+    SummarizedExperiment,
+    S4Vectors,
     shiny (>= 1.4.0),
     shinyBS (>= 0.61),
     shinyjs (>= 1.1),
@@ -70,12 +84,15 @@ Imports:
     stringr,
     stats,
     scater (>= 1.15.12),
+    symphony (>= 0.1.0),
     tibble (>= 2.1.3),
+    tidyr,
     utils,
-    digest,
-    presto
+    viridis
 Suggests: 
     testthat,
+    scuttle,
+    shinytest
 Depends: 
     R (>= 4.0)
 Remotes: 
