--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: dseqr
 Type: Package
 Title: GUI to Explore Single-Cell and Bulk RNA-Seq from Fastq to Pathways and Perturbations
 Version: 0.29.4
-Author: Alex Pickering
-Maintainer: Alex Pickering <alexvpickering@gmail.com>
+Authors@R: person("Alex", "Pickering", email="alexvpickering@gmail.com", role=c("cre", "aut"))
 BugReports: https://github.com/hms-dbmi/dseqr/issues
 URL: https://github.com/hms-dbmi/dseqr
 Description: GUI to import and explore single-cell and bulk RNA-seq datasets 
@@ -19,7 +18,6 @@ Description: GUI to import and explore single-cell and bulk RNA-seq datasets
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.1.2
-biocViews:
 SystemRequirements:
   kallisto (0.46.0)
 Imports:
@@ -94,9 +92,10 @@ Suggests:
     scuttle,
     shinytest
 Depends: 
-    R (>= 4.0)
+    R (>= 4.1.0)
 Remotes: 
     hms-dbmi/dseqr.data,
+    hms-dbmi/repel,
     alexvpickering/rkal,
     alexvpickering/crossmeta,
     immunogenomics/presto
