move kallisto out of single-cell import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(init_dseqr)
 export(navbar2UI)
 export(navbarUI)
 export(run_dseqr)
+export(run_kallisto_scseq)
 export(scPage)
 export(scPageUI)
 export(theme_dimgray)
