move to kb-python for quant

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_cluster_numbers)
 export(bulkPage)
 export(bulkPageUI)
+export(download_kb_index)
 export(drugsPage)
 export(drugsPageUI)
 export(from_crossmeta)
@@ -13,7 +14,7 @@ export(init_dseqr)
 export(navbar2UI)
 export(navbarUI)
 export(run_dseqr)
-export(run_kallisto_scseq)
+export(run_kb_scseq)
 export(scPage)
 export(scPageUI)
 export(theme_dimgray)
