--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -19,14 +19,13 @@ permissions:
 
 jobs:
   build:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        r-version: ['4.1.3']
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@master
-    - uses: r-lib/actions/setup-r@v1
-    - uses: r-lib/actions/setup-renv@v1
+    - uses: actions/checkout@v2
+    - uses: r-lib/actions/setup-r@v2
+      with:
+        r-version: '4.1.3' # The R version to download (if necessary) and use.
+    - uses: r-lib/actions/setup-renv@v2
       with:
         cache-version: 2
