--- a/.github/workflows/cd-renv.yml
+++ b/.github/workflows/cd-renv.yml
@@ -18,7 +18,7 @@ jobs:
       # single OS and R version, aligned with the target deployment environment
       matrix:
         config:
-          - {os: ubuntu-latest, r: 'release'}
+          - {os: ubuntu-18.0.4, r: '4.1.3'}
 
     env:
       # Access token for GitHub
