fix version specification

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,9 @@ jobs:
           context: .
           target: deploy
           push: true
+          build-args: |
+            DSEQR_VERSION=${{ github.ref_name }}
           tags: ${{ env.DOCKERHUB_REPO }}:latest
           cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
+
