--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -2,10 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
 # Triggered on push
-on:
-  push:
-    tags-ignore:
-      - '**'
+on: [push, pull_request]
 
 # Name of the workflow => usethis::use_github_actions_badge("CI-CD-renv")
 name: R-CMD-check
