--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -1,8 +1,12 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
-# Triggered on push
-on: [push, pull_request]
+# Triggered on push, PR, but not tags
+on:
+  push:
+    branches:
+      - "*"
+  pull_request:
 
 # Name of the workflow => usethis::use_github_actions_badge("CI-CD-renv")
 name: R-CMD-check
