fix local run; init shinytest2; fixed reproducibility
fix local run:
- exported functions used in server.R

init shinytest2:
- fixed duplicate "tab" ids (wouldn't run without)
- initialized integration test by uploading single-cell data
- added defaults to getShinyOption called in ui.R (wouldn't run without)
- added to r-cmd-check workflow

reproducibility
- set seed for scDblFinder (would get different end results without)
- upgrade uwot to use batch=TRUE argument

--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -63,3 +63,8 @@ jobs:
         uses: r-lib/actions/check-r-package@v2
         with:
           error-on: '"error"'
+
+      - name: Check shiny app
+        uses: rstudio/shinytest2/actions/test_app@v1
+        with:
+          path: "inst/app"
