--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,19 @@
 export(add_cluster_numbers)
 export(bulkPage)
 export(bulkPageUI)
+export(check_has_scseq)
 export(download_kb_index)
 export(drugsPage)
 export(drugsPageUI)
 export(from_crossmeta)
+export(getDeleteRowButtons)
 export(get_palette)
 export(get_presto_markers)
 export(get_species)
 export(init_dseqr)
 export(navbar2UI)
 export(navbarUI)
+export(qread.safe)
 export(run_dseqr)
 export(run_kb_scseq)
 export(scPage)
