--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(theme_no_yaxis)
 import(celldex)
 import(rintrojs)
 import(shiny)
+importFrom(TSP,TSP)
+importFrom(TSP,solve_TSP)
 importFrom(magrittr,"%>%")
 importFrom(presto,wilcoxauc)
 importFrom(rlang,"%||%")
