--- a/.github/actions/shinytest2/action.yml
+++ b/.github/actions/shinytest2/action.yml
@@ -21,20 +21,19 @@ runs:
         v <- paste0(version$major, ".", version$minor)
         cat(paste0("::set-output name=version::", v, "\n"))
 
-    - name: Install dseqr and shinytest2
+    - name: Install dseqr
       shell: Rscript {0}
       run: |
         ## --------------------------------------------------------------------
-        install.packages(c("remotes", "shinytest2"))
+        install.packages("remotes")
         remotes::install_local(".", upgrade = FALSE, build = TRUE, dependencies = FALSE)
 
     - name: Test app
       shell: Rscript {0}
-      working-directory: ${{ inputs.app-dir }}
       run: |
         ## --------------------------------------------------------------------
         options(crayon.enabled = TRUE)
-        shinytest2::test_app()
+        shinytest2::test_app("inst/app")
 
     - name: Show testthat output
       if: always()
