add kb cleanup; fix boolean scatterplots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_cluster_numbers)
 export(bulkPage)
 export(bulkPageUI)
 export(check_has_scseq)
+export(clean_kb_scseq)
 export(download_kb_index)
 export(drugsPage)
 export(drugsPageUI)
