fix/test duplicate cell names bug; fix subset/dtangle cluster colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ export(drugsPage)
 export(drugsPageUI)
 export(from_crossmeta)
 export(getDeleteRowButtons)
+export(get_expression_colors)
 export(get_palette)
 export(get_presto_markers)
 export(get_species)
 export(init_dseqr)
+export(load_scseq_qs)
 export(navbar2UI)
 export(navbarUI)
 export(qread.safe)
