big one; see description
- instead of ambient gene calling: add column showing number of clusters with FDR<0.5
- DE grid: plot clusters with FDR<0.5 and FDR<0.05
- use cluster color for label boxes
- feature table supports keyboard interactions
- gene table filters are preserved
- can clear gene table filters
- deduplication of cluster names is prettier
- dont hide annotation with high spread

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -97,6 +97,7 @@ Depends:
 Remotes: 
     hms-dbmi/dseqr.data,
     hms-dbmi/repel,
+    hms-dbmi/picker,
     alexvpickering/rkal,
     alexvpickering/crossmeta,
     immunogenomics/presto
