--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: GUI to import and explore single-cell and bulk RNA-seq datasets
     CMAP02 and L1000 perturbation signatures.
 License: MIT + file LICENSE
 Encoding: UTF-8
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 BiocViews:
 SystemRequirements:
   kallisto (0.46.0)
@@ -87,8 +87,7 @@ Imports:
     tibble (>= 2.1.3),
     tidyr,
     TSP,
-    utils,
-    viridis
+    utils
 Suggests: 
     testthat (>= 3.0.0),
     scuttle,
