--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -56,6 +56,8 @@ jobs:
 
       - name: Activate renv and restore packages with cache
         uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 2
 
       - name: Install R CMD check
         run: install.packages("rcmdcheck")
