update badge; run test on PR only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
           cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
           tags: ${{ env.DOCKERHUB_REPO }}:testing
 
-      - name: Test
+      - name: Test pull request
+        if: github.event.pull_request.merged == false
         run: |
           docker run --rm ${{ env.DOCKERHUB_REPO }}:testing
 
@@ -54,7 +55,7 @@ jobs:
       # push cache that includes production and testing
       - name: Push buildcache to DockerHub on merge
         uses: docker/build-push-action@v2
-      #  if: github.event.pull_request.merged == true
+        if: github.event.pull_request.merged == true
         with:
           context: .
           cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
