--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
     grr,
     ggplot2 (>= 3.2.1),
     GO.db (>= 3.10.0),
+    glmGamPoi,
     hdf5r (>= 1.3.1),
     htmltools,
     htmlwidgets,
