--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(bulkPage)
 export(bulkPageUI)
 export(check_has_scseq)
 export(clean_kb_scseq)
+export(dir_exists)
 export(download_kb_index)
 export(drugsPage)
 export(drugsPageUI)
+export(file_exists)
 export(from_crossmeta)
 export(getDeleteRowButtons)
 export(get_expression_colors)
@@ -15,10 +17,13 @@ export(get_palette)
 export(get_presto_markers)
 export(get_species)
 export(init_dseqr)
+export(isTruthy)
 export(load_scseq_qs)
+export(make_unique)
 export(navbar2UI)
 export(navbarUI)
 export(qread.safe)
+export(req)
 export(run_dseqr)
 export(run_kb_scseq)
 export(scPage)
