fix tests and slack error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(run_dseqr)
 export(run_kb_scseq)
 export(scPage)
 export(scPageUI)
+export(send_slack_error)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
